# nebula-music

./: CMakeLists.txt  Consts.js  Main.qml  Navbar.qml  Navbar_button.qml  Now_playing.qml  Player.qml  Player_controls.qml  Queue.qml  Queue_item.qml  README.md  Seperator.qml  Song_item.qml  Songs_header.qml  Songs_page.qml  Songs_title.qml  database.cpp  database.h  main.cpp  player.cpp  player.h  queuemodel.cpp  queuemodel.h  resources.qrc
